--- a/src/pages/webapp/PlayListCard.css
+++ b/src/pages/webapp/PlayListCard.css
@@ -90,10 +90,14 @@
   }
 
   .playlist-message{
+      position: absolute;
+      top: 15%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background-color: rgb(230, 188, 84);
-      max-width: 200px;
+      height: 2.1rem;
+      display: inline-block;
       text-align: center;
       padding: 0.5rem;
       border-radius: 15px;
-      margin: 0 auto;
   }
