--- a/src/pages/webapp/PlaylistCopy.css
+++ b/src/pages/webapp/PlaylistCopy.css
@@ -1,23 +1,31 @@
 
 .listcopy{
-    width: 24%;
-    background-color: var(--color-btn);
-    height: 19rem;
-    color: white;
+
+    background-color: var(--color-green);
+
+    color: var(--color-gray);
     border-radius: 10px;
     font-size: var(--fs-h5);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    font-weight: bold;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 25rem;
+    padding: 2.5rem;
+    gap: 1rem;
 }
 
 .listcopy-item{
-    margin-left: 2rem;
-    padding-top: 1rem;
-    
+    display: flex;
+    flex-direction: column;
+    max-width: 18rem;
 }
 
-/* .listcopy-options-select{
-    color: var(--color-lightGray);
-} */
+.listcopy-item label{
+    margin-bottom: 1rem;
+    display: block;    
+}
 
 .listcopy-select{
     margin-top: 0.5rem;
@@ -34,8 +42,13 @@
     font-family: Sora, sans-serif;
     font-size: var(--fs-h6);
     color: var(--color-secondary);
-    border-radius: 4px;
+    border-radius: 5px;
+    max-width: 17rem;
     border: none;
+}
+
+.listcopy-item-btn{
+    max-width: 15rem;
 }
 
 .listcopy-options-select{
@@ -50,14 +63,41 @@
   /* Card */
   .listcopy-card-container{
     display: flex;
+    flex-wrap: wrap;
   }
   .listcopy-card{
-      display: flex;
-      border-radius: 6px;
-      background-color: var(--color-btn);
+      border-radius: 10px;
+      background: linear-gradient(to right, var(--color-lightgreen) 50%, var(--color-green) 0%);
       margin: 1rem;
       padding: 1.5rem;
       box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+      
+  }
+
+    .listcopy-card-head-info{
+        margin: 0.2rem 0;
+    }
+
+    .listcopy-card-nr{
+        font-size: var(--fs-h3);
+        font-weight: bold;
+        color: var(--color-primary);
+        display: inline;
+    }
+
+  .listcopy-card-inner{
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    gap: 0.6rem;
+    font-weight: bold;
+    font-size: var(--fs-h5);
+    max-width: 20rem;
+  }
+
+  .listcopy-card-message{
+    display: inline-block;
+    margin-left: 4rem;
   }
 
   .btn-copy{
@@ -83,14 +123,13 @@
     transform: scale(0.95);
   }
 
-  .listcopy-card-fromTo-flex{
-      display: flex;
-      margin-bottom: 0.5rem;
+  .listcopy-card-fromTo-div p{
+      margin-bottom: 0.3rem;
   }
 
   .listcopy-card-fromTo{
       background-color: white;
-      padding: 0.1rem;
+      padding: 0.2rem;
+      padding-left: 0.5rem;
       border-radius: 4px;
-      margin-right: 0.1rem;
   }
