--- a/src/pages/webapp/PlaylistCopy.css
+++ b/src/pages/webapp/PlaylistCopy.css
@@ -11,9 +11,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 25rem;
+    max-width: 23rem;
     padding: 2.5rem;
     gap: 1rem;
+    margin-left: 1rem;
 }
 
 .listcopy-item{
@@ -64,6 +65,7 @@
   .listcopy-card-container{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 2rem;
   }
   .listcopy-card{
       border-radius: 10px;
