--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,51 +2,41 @@
 .navbar{
     width: 100%;
     padding: 20px 10px;
-    height: 10vh;
-    background: rgb(0,88,3);
-    background: linear-gradient(90deg, rgba(0,88,3,1) 
-    0%, rgba(18,124,89,1) 35%, rgba(0,255,102,1) 100%);
-    clip-path: ellipse(87% 100% at 50% 0%);
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.navbar-first{
-    padding-left: 2rem;
-}
-.navbar-last{
-    margin-left: auto;
-}
-.navbar::after{
-    content: "";
-    position: relative;
-    display: inline-block;
-    margin-bottom: 5rem;
-    height: 100px;
+    background: #06D061;
+    margin: 0;
 }
 
 .navbar-list{
     display: flex;
     justify-content: space-between;
-    margin: 0 5rem;
     color: var(--color-primary);
     font-size: var(--fs-h5);
-    gap: 20px;
+    align-items: center;
+    width: 1400px;
+    margin: 0 auto;
 }
 .nav-btn{
-    background: var(--color-btn);
+    background: var(--color-secondary);
     border: none;
-    border-radius: 10px;
+    border-radius: 25px;
     padding: 6px 12px;
-    height: 35px;
     color: var(--color-primary);
-    font-size: var(--fs-p);
+    font-size: var(--fs-small);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
-.nav-btn:hover{
+.nav-icon{
+    font-size: 2rem;
+}
+.nav-user{
+
+}
+/* .nav-btn:hover{
     background: var(--color-btn-selected);
     color: var(--color-primary);
     cursor: pointer;
   }
   .nav-btn:active{
     transform: scale(0.95);
-  }
+  } */
