--- a/src/pages/webapp/PlayListCard.css
+++ b/src/pages/webapp/PlayListCard.css
@@ -80,23 +80,44 @@
 
 .playlist-buttons{
     background-color: var(--color-lightGray);
-    /* display: flex;
-    margin: 20px;
-    justify-content: center; */
-    position: absolute;
-    left: -8rem;
+
     width: 28rem;
     height: 100vh;
-}
-.playlist-buttons-container{
-    width: 20rem;
+    position: relative;
 
 }
-.playlist-btn{
-    position: relative;
-    height: 45px;
-    margin: 0 0.5rem;
-  }
+.playlist-buttons-container{
+    width: 22rem;
+    position: absolute;
+    right: 0;
+    top: 8rem;
+    gap: 0.5rem;
+    display: flex;
+    flex-direction: column;
+
+}
+.btn-sidebar{
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    color: var(--color-letter);
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.2s ease-in;
+    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.btn-sidebar:hover{
+    font-weight: 500;
+    font-size: 0.92rem;
+    cursor: pointer;
+}
+.list-icons{
+    font-size: 1.5rem;
+}
 
   .playlist-message{
       position: absolute;
