--- a/src/pages/listBase/listBase.css
+++ b/src/pages/listBase/listBase.css
@@ -1,9 +1,8 @@
 
 .listbase-list-container{
-    background-color: rgb(241, 241, 241);
-    padding: 1rem 1rem 0.1rem 1rem;
+    background-color: var(--color-gray);
     margin: 1rem 0;
-    border-radius: 20px;
+    color: var(--color-letter);
 }
 .listbase-list{
     margin-top: 1rem;
@@ -12,6 +11,7 @@
     gap: 2rem;
     flex-wrap: wrap;
     justify-content: flex-start;
+    padding: 1rem;
 }
 
 .listbase-item p{
@@ -21,13 +21,17 @@
     font-weight: bold;
 }
 .listbase-btn {
-    background-color: rgb(210, 66, 30);
+    background-color: rgb(220, 75, 39);
     border-radius: 10px;
     color: var(--color-primary);
     border: none;
-    font-size: 1.5rem;
-    padding: 0.4rem 0.7rem;
+    font-size: 1.6rem;
+    padding: 0.2rem 0.6rem;
     transition: all 0.2s;
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+    cursor: pointer;
 }
 .listbase-btn:hover{
     transform: translateY(-3px);
@@ -37,7 +41,17 @@
     transform: translateY(-1px);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.356);
 }
-.listbase-outerlist{
-    display: flex;
-    justify-content: space-between;
+.listbase-top{
+    background-color: rgb(41, 41, 41);
+    position: relative;
+    text-align: center;
+    padding: 0.5rem;
+}
+.listbase-date{
+    background-color: var(--color-green);
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0.4rem;
+    color: white;
 }
