--- a/src/pages/webapp/PlayListCard.css
+++ b/src/pages/webapp/PlayListCard.css
@@ -1,93 +1,82 @@
 
-.playlist-card{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin: 10px;
-    background-color: rgb(241, 241, 241);
 
-}
-.playlist-card img{
-    height: 75px;
-    width: 75px;
+.playlist-img-title{
+display: flex;
+gap: 1rem;
+align-items: center;
 }
 .playlist-name{
-    flex-grow: 2;
-    max-width: 15rem;
     font-weight: bold;
-    overflow: hidden;
+
 }
 .playlist-description{
-    flex-grow: 2;
-    max-width: 24rem;
-    padding-right: 3rem;
-    padding-top: 0.5rem;
     font-size: 0.9rem;
 }
 
 .playlist-name{
     padding-top: 10px;
 }
-.playlist-tracks{
-    flex-grow: 0.5;
-    max-width: 13rem;
-    padding-top: 0.5rem;
-    margin-left: auto;
-    display: flex;
-}
-.playlist-followers{
-    flex-grow: 0.5;
-    max-width: 13rem;
-    padding-top: 0.5rem;
-}
-.playlist-followers-div{    
-    display: flex;
-}
-.playlist-arrow{
-    margin-left: 0.5rem;
+
+.playlist-table{
+    border-collapse: collapse; 
 }
 
 .playlist-headers{
-    display: flex;
+color: var(--color-letter);
+margin-bottom: 4rem;
+text-align: left;
+
+}
+.playlist-headers th{
+    padding: 20px 20px 20px 0;
 }
 .playlist-headers::after{
     content: "";
-    width: 94.5%;
+    width: 100%;
     height: 40px;
     border-bottom: 2px solid rgba(128, 128, 128, 0.616);
     position: absolute;
-    left: 38px;
-}
-.playlist-header-name{
-    flex-grow: 5;
-    font-weight: bold;
-    margin-bottom: 10px;
-    margin-left: 10px;
-}
-.playlist-description{
-    width: 250px;
-}
-.playlist-header-track{
-    flex-grow: 1;
-    font-weight: bold;
-    margin-left: 10rem;
+    left: 0;
 }
 
-.playlist-header-followers{
-    flex-grow: 1;
-
+.playlist-row{
+    color: var(--color-letter);
+    background-color: transparent;
+    width: 100%;
+    padding: 1rem;
 }
+.playlist-row img{
+    height: 100px;
+    width: 100px;
+    padding: 0.4rem;
+}
+
 
 .playlist-buttons{
     background-color: var(--color-lightGray);
 
-    width: 28rem;
+    width: 22rem;
     height: 100vh;
     position: relative;
 
 }
+.playlist-result{
+    position: absolute;
+    top: 6rem;
+    left: 28%;
+
+    max-width: 65rem;
+}
+
+@media screen and (max-width: 1300px) {
+    .playlist-result{
+        left: 38%;
+    
+        max-width: 60rem;
+    }
+}
 .playlist-buttons-container{
-    width: 22rem;
+    width: 19rem;
     position: absolute;
     right: 0;
     top: 8rem;
